[CHG] Fixing layout issues
* Makes h1 smaller so that more titles fit on one line.
* Fix the 3 column layout to fit a full 3 components for courses
* Fix a bug where the subcategory was not being removed on reassignment

--- a/app/assets/stylesheets/components/_course_widget.scss
+++ b/app/assets/stylesheets/components/_course_widget.scss
@@ -3,7 +3,7 @@
   width: 329px;
   border: 1px solid $medium-grey;
   margin-bottom: 2em;
-  margin-right: 1.15em;
+  margin-right: .75em;
   height: 175px;
   overflow: hidden;
   border-top-left-radius: 20px;
