--- a/app/assets/stylesheets/partials/_banner.scss
+++ b/app/assets/stylesheets/partials/_banner.scss
@@ -11,16 +11,6 @@
     font-weight: 100;
     margin-bottom: 0;
     margin-top: 13px;
-
-    @include media($desktop) {
-      font-size: 3.3em;
-    }
-
-    &.slogan {
-      @include media($desktop) {
-        font-size: 3.3em;
-      }
-    }
   }
 
   [class^="icon-"] {
